# company-tools

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md  requests.http
.code_quality/: .flake8
app/commons/: logger.py  time.py
app/register/: adapters.py  configurations.py  main.py  model.py  ports.py  usecases.py
app/register/entrypoints/: __init__.py  cron.py
app/register/entrypoints/view/: money_format.py  utils.py  view.py
app/reporter/: lambda.py  usecases.py  utils.py
tests/: test_clean_daily_shifts.py  test_constants.py  test_get_daily_report_integration.py  test_sync_bills.py
